--- a/style.css
+++ b/style.css
@@ -1,275 +1,140 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap");
 * {
   margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
-.button {
-  background: #65F3AC;
-  border: none;
-  padding: 15px 60px 15px 30px;
-  font-size: 16px;
-  font-family: 'Montserrat' !important;
-  font-weight: 600;
-  border-radius: 3px;
+body {
+   background-color: #2D2F33;
 }
 
-.button:hover {
-  cursor: pointer;
+nav {
+   display: flex;
+   color: white;
+   font-family: Montserrat;
+   justify-content: space-between;
+   font-weight: 600;
+   margin: 20px;
+
 }
 
-.banner {
-  position: relative;
-  height: 50vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 30px;
-  background-color: #25262A;
+.nav_head {
+   font-size: 25px;
 }
 
-.banner .grid-container {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  display: -ms-grid;
-  display: grid;
+.nav_head::after {
+   display: block;
+   content: ' ';
+   border-radius: 12px;
+   width: 100%;
+   height: 3px;
+   background: #65F3AC;
+
 }
 
-.banner .grid-container .content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 30px;
-  width: 100%;
+.inner_head {
+   display: flex;
+   width: 15%;
+   justify-content: space-evenly;
 }
 
-.banner .grid-container .content h2 {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 25px;
-  color: #E2E2E2;
+.inner_text
+{
+   margin: 0 3px;
+   cursor: pointer;
 }
 
-.banner .grid-container .content h1 {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  color: #65F3AC;
+.container {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr;
+   grid-template-rows: 1fr 1fr 1fr;
+   row-gap: 2rem;
+   justify-self: center;
+
 }
 
-.banner .grid-container .content p {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 13px;
-  color: #A2A4A3;
-  width: 100%;
+.card {
+
+   border-radius: 10px;
+   background: linear-gradient(#2D2F33, #2D2F33) padding-box, linear-gradient(135deg, grey, #2D2F33) border-box;
+   border-radius: 10px;
+   border: 2px solid transparent;
+   backdrop-filter: blur(10px);
+   color: white;
+   display: flex;
+   flex-direction: column;
+   font-family: Montserrat;
+   font-size: 20px;
+   font-weight: 600;
+   height: 338px;
+   justify-content: space-evenly;
+   margin: 10px;
+   padding: 10px;
+   width: 268px;
 }
 
-.banner .grid-container .banner-image {
-  display: none;
+.card:hover {
+   transition: all 2s ease;
+   box-shadow: -.5px -.5px .5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
 
-.scroll {
-  position: absolute;
-  bottom: 5px;
-  left: 50%;
-  right: 50%;
+.card-img {
+   width: 232px;
+   height: 174px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 5px;
 }
 
-.scroll a#scroll-btn {
-  width: 15px;
-  height: 35px;
-  border: 1px solid #51555E;
-  background: #51555E;
-  margin: auto;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 2.25em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  border-radius: 3em;
+
+.card-content {
+   font-size: 25px;
+   font-weight: 700;
+   padding-left: 20px;
+   margin: 0;
+
 }
 
-.scroll a#scroll-btn:before {
-  position: absolute;
-  content: "";
-  margin: auto;
-  bottom: 1.30em;
-  height: 13px;
-  width: 100%;
-  background-color: #65F3AC;
-  border-radius: 50%;
-  -webkit-animation: move-down 2s infinite;
-          animation: move-down 2s infinite;
+.head_name {
+   font-size: 18px;
+   margin: 10px 0;
 }
 
-@-webkit-keyframes move-down {
-  80% {
-    opacity: 0.5;
-  }
-  100% {
-    -webkit-transform: translateY(1.3em);
-            transform: translateY(1.3em);
-    opacity: 0;
+.club_title {
+   font-size: 11px;
+   font-weight: 600;
+   color: #65F3AC;
+
+}
+
+.logo_img {
+   cursor: pointer;
+   margin-right: 9px;
+}
+
+.card-logo {
+   padding-left: 20px;
+
+
+}
+
+/* Tablet view :) */
+
+@media (min-width: 768px) and (max-width: 1023px){
+  .container
+  {
+   grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-@keyframes move-down {
-  80% {
-    opacity: 0.5;
-  }
-  100% {
-    -webkit-transform: translateY(1.3em);
-            transform: translateY(1.3em);
-    opacity: 0;
-  }
-}
+/* Mobile view :) */
 
-#bgtext1,
-#bgtext2 {
-  display: none;
-}
+@media(max-width: 480px) {
+   .container {
+       grid-template-columns: 1fr;
+       grid-template-rows: auto;
+       justify-content: center;
+       justify-items: center;
+       align-self: center;
+   }
 
-@media only screen and (min-width: 600px) {
-  .banner {
-    height: 100vh;
-    padding: 0 114px;
-  }
-  .banner a#scroll-btn {
-    width: 22px;
-    height: 44px;
-    left: 0;
-    right: 0;
-    bottom: 2.25em;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .banner a#scroll-btn:before {
-    bottom: 1.25em;
-    height: 20px;
-    width: 22px;
-  }
-  .banner .content h2,
-  .banner .content h1 {
-    font-size: 40px !important;
-  }
-  .banner .content p {
-    font-size: 18px !important;
-  }
-  .grid-container {
-    -ms-grid-columns: 40% 60%;
-        grid-template-columns: 40% 60%;
-  }
-  #bgtext1 {
-    display: block;
-    position: absolute;
-    left: 114px;
-    top: 150px;
-    z-index: 1;
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: 165px;
-    opacity: 0.02;
-    color: #65F3AC;
-  }
-  #bgtext2 {
-    display: block;
-    position: absolute;
-    right: 300px;
-    top: 330px;
-    z-index: 1;
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: 165px;
-    opacity: 0.02;
-    color: #65F3AC;
-  }
 }
-
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: Montserrat !important;
-}
-
-.navbar {
-  background-color: #25262A !important;
-  border-bottom: 3px solid #65F3AC;
-}
-
-.navbar .navbar-nav .nav-link {
-  color: #FFF !important;
-}
-
-.navbar .navbar-brand {
-  color: #FFF !important;
-  font-weight: 700;
-  font-size: 1.8rem;
-  margin-left: 7%;
-}
-
-.navbar .navbar-brand::first-letter {
-  color: #65F3AC !important;
-}
-
-.navbar .navbar-nav .nav-link.active {
-  color: #65F3AC !important;
-  border-bottom: 3px solid #65F3AC;
-}
-
-.navbar .navbar-nav .nav-link {
-  margin-right: 1.6rem !important;
-}
-
-.navbar .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' standalone='no'%3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 20010904//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'%3E%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='257.000000pt' height='238.000000pt' viewBox='0 0 257.000000 238.000000' preserveAspectRatio='xMidYMid meet'%3E%3Cg transform='translate(0.000000,238.000000) scale(0.100000,-0.100000)'%0Afill='%2365F3AC' stroke='none'%3E%3Cpath d='M398 2091 c-122 -24 -148 -198 -41 -268 26 -17 78 -18 978 -18 l950%0A0 33 23 c85 61 83 192 -5 249 -26 17 -79 18 -953 19 -509 1 -942 -1 -962 -5z'/%3E%3Cpath d='M370 1328 c-102 -52 -107 -196 -10 -253 34 -20 50 -20 680 -20 606 0%0A648 1 673 18 89 58 89 196 0 254 -25 17 -70 18 -663 21 l-635 2 -45 -22z'/%3E%3Cpath d='M704 590 c-324 -5 -343 -6 -364 -25 -78 -71 -62 -201 30 -247 31 -15%0A75 -17 365 -18 368 0 377 1 422 69 56 83 7 208 -87 222 -14 2 -179 2 -366 -1z'/%3E%3C/g%3E%3C/svg%3E%0A");
-}
-
-.navbar .navbar-toggler-icon:focus {
-  background-color: red !important;
-}
-
-@media screen and (max-width: 768px) {
-  .navbar .navbar-nav .nav-link {
-    margin-left: 2em !important;
-  }
-}
-/*# sourceMappingURL=style.css.map */
