fix grid and add event cards

--- a/_nav.scss
+++ b/_nav.scss
@@ -19,6 +19,7 @@ $text: #A2A4A3;
 $primary: #25262A;
 $secondary: #2D2F33;
 $input: #2F3335;
+$black: #090909;
 // change navbar color
 .navbar {
     background-color: #25262A !important;
