--- a/style.scss
+++ b/style.scss
@@ -48,8 +48,8 @@ $input: #2f3335;
   &:hover {
     cursor: pointer;
   }
-  .arrow{
-    margin-left:10px;
+  .arrow {
+    margin-left: 10px;
   }
 }
 
@@ -232,21 +232,99 @@ $input: #2f3335;
   background-color: red;
 }
 
-//mobile friendly code - completed
-// Contact us Section
-.contact_us {
-  background: $secondary;
-  padding: 50px;
+// Our clubs section
 
-  .contact_heading {
+.card {
+    border-radius: 10px;
+    background: linear-gradient(#2d2f33, #2d2f33) padding-box,
+      linear-gradient(135deg, grey, #2d2f33) border-box;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    backdrop-filter: blur(10px);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-family: Montserrat;
+    font-weight: 600;
+    justify-content: space-evenly;
+    padding: 35px;
+    height: fit-content;
+    width: 100%;
+    margin: 0 0 50px;
+    &:last-child {
+      margin: 0;
+    }
+    .card-img {
+      width: 100%;
+      background-color: $input;
+    }
+    .card-content {
+      margin: 15px 0 0;
+      .card-heading-container {
+        display: flex;
+        margin: 10px 0 0;
+      }
+      .card-heading {
+        font-weight: 600;
+        font-size: 1.25em;
+        margin-right: 20px;
+        &::after {
+          content: "";
+          display: block;
+          width: 50%;
+          height: 3px;
+          background-color: $lime;
+          border-radius: 5px;
+          margin-top: 5px;
+        }
+      }
+      .circle {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $lime;
+        border-radius: 50%;
+        color: #25262a;
+      }
+      .card-description {
+        font-weight: normal;
+        color: #bfbfbf;
+        font-size: 1em;
+        margin-top: 20px;
+        line-height: 35px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
+      .view-more {
+        background-color: $lime;
+        padding: 10px 24px;
+        color: #25262a;
+        margin-top: 20px;
+        border-radius: 5px;
+        font-weight: bold;
+      }
+    }
+  }
+
+.our_club {
+  padding: 50px 30px;
+  background-color: $secondary;
+  .our_club_heading {
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 20px;
     letter-spacing: 0.01em;
     color: $grey;
     text-align: center;
+  }
+  .club_button {
+    display: none;
   }
 
   .underline {
@@ -256,10 +334,58 @@ $input: #2f3335;
     border-radius: 12px;
     margin: 11px auto 42px;
   }
+}
+
+// What we do Section
+.what_we_do {
+    padding:50px 30px;
+    background-color: #26282B;
+    display: grid;
+  .wwd_heading {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 20px;
+    letter-spacing: 0.01em;
+    color: $grey;
+    text-align: center;
+  }
+  .card{
+    padding:30px;
+    .card-content{
+        margin:0;
+    }
+  }
+}
+
+.underline {
+  width: 40px;
+  height: 5px;
+  background-color: $lime;
+  border-radius: 12px;
+  margin: 11px auto 42px;
+}
+//mobile friendly code - completed
+// Contact us Section
+.contact_us {
+  background: $secondary;
+  padding: 50px 30px;
+
+  .contact_heading {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 20px;
+    letter-spacing: 0.01em;
+    color: $grey;
+    text-align: center;
+  }
 
   .form {
     max-width: 768px;
-    margin:0 auto;
+    margin: 0 auto;
     .form_group {
       display: flex;
       flex-direction: column;
@@ -281,32 +407,30 @@ $input: #2f3335;
       .input {
         width: 100%;
         background-color: $input;
-        border:none;
-        outline:none;
+        border: none;
+        outline: none;
         display: block;
         border-radius: 5px;
-        padding:10px 15px;
-        color:$grey;
-        
+        padding: 10px 15px;
+        color: $grey;
       }
 
-      .input:focus{
+      .input:focus {
         outline: 1.5px solid $lime;
-        color:$lime;
+        color: $lime;
       }
-      
-      label{
+
+      label {
         font-size: 0.85rem;
         margin-bottom: 10px;
         font-weight: 500;
-        color:$grey;
+        color: $grey;
       }
-
     }
-    .submit{     
-      margin:30px auto 0;
+    .submit {
+      margin: 30px auto 0;
     }
-}
+  }
 }
 
 //mobile friendly code - completed
@@ -339,7 +463,7 @@ footer {
   .nav_links {
     display: flex;
     justify-content: center;
-    margin-top:25px;
+    margin-top: 25px;
 
     ul {
       list-style: none;
@@ -355,16 +479,16 @@ footer {
           font-family: "Montserrat";
           font-style: normal;
           font-weight: 400;
-          font-size: 14px;
+          font-size: 16px;
           line-height: 20px;
           letter-spacing: 0.01em;
           margin: 13px 15px;
         }
-        .first_link{
-            margin-left:0;
+        .first_link {
+          margin-left: 0;
         }
-        .last_link{
-            margin-right:0;
+        .last_link {
+          margin-right: 0;
         }
       }
     }
@@ -378,7 +502,7 @@ footer {
     line-height: 20px;
     color: $text;
     text-align: center;
-    padding:10px;
+    padding: 10px;
 
     span {
       color: $lime;
@@ -451,20 +575,103 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
-    .form_group{
-        flex-direction: row !important;
-        gap:30px;
-    }
+  .form_group {
+    flex-direction: row !important;
+    gap: 30px;
+  }
+  .whatwedo_container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);   
+    column-gap:40px;
+}
 }
 
 @media screen and (min-width: 980px) {
   .navbar,
   .banner {
-    padding: 0.5rem 100px;
+    padding: 0.5em 100px;
+  }
+  .our_club {
+    padding: 50px 100px;
+    .card {
+      background: unset;
+      padding: 0;
+    }
+    .club_button {
+      border-radius: 10px;
+      background: linear-gradient(#2d2f33, #2d2f33) padding-box,
+        linear-gradient(135deg, grey, #2d2f33) border-box;
+      border-radius: 10px;
+      border: 2px solid transparent;
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+      color: white;
+      display: flex;
+      align-items: center;
+      font-family: Montserrat;
+      font-weight: 600;
+      font-size: 1em;
+      justify-content: space-evenly;
+      padding: 35px;
+      position: relative;
+      width: 100%;
+      margin: 0 0 30px;
+      .club_icon {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        background-color: $lime;
+      }
+      .pointer {
+        display: none;
+      }
+    }
+    .club_button.active {
+      background-color: $secondary;
+      border: 2px solid $lime;
+      .pointer {
+        display: block;
+        width: 0;
+        height: 0;
+        border: 15px solid transparent;
+        border-top: 0;
+        border-bottom: 20px solid $lime;
+        transform: rotate(90deg);
+        position: absolute;
+        right: -30px;
+      }
+    }
+    
   }
 
+  .club_container {
+    display: grid;
+    grid-template-columns: 30% auto;
+    gap: 60px;
+    .club_navigator {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      font-size: 20px;
+    }
+    .card:not(:nth-child(1)) {
+      display: none;
+    }
+  }
   .grid-container {
     grid-template-columns: repeat(2, 1fr);
   }
+  .banner-image {
+    display: block !important;
+    img {
+      width: 100%;
+    }
+  }
+  .what_we_do{
+    padding: 50px 100px ;
+  }
+  .whatwedo_container{
+    grid-template-columns: repeat(3,1fr);   
+}
 }
 //Navbar Ends
