--- a/team.scss
+++ b/team.scss
@@ -58,9 +58,8 @@
   .card-container {
      display: grid;
      grid-template-columns: 1fr;
-     row-gap: 2rem;
      justify-self: center;
-  
+    gap:5em;
   }
   
   .card {
@@ -77,6 +76,7 @@
      font-weight: 600;
      justify-content: space-evenly;
      padding: 25px 20px;
+     margin-bottom: 0;
      width: 100%;
   }
   
@@ -121,7 +121,6 @@
   /* large phone view :) */
 @media screen and (min-width: 600px){
     .card-container{
-        grid-template-columns: repeat(2, 1fr);
         justify-content: space-between;
         gap:20px;
     }
@@ -131,7 +130,7 @@
   /* Tablet view :) */
   @media screen and (min-width: 700px){
     .card-container{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         justify-content: space-between;
     }
 }  
@@ -142,8 +141,13 @@
     }
 }
 
+@media screen and (min-width:1024px){
+    .card-container{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
 // Desktop View
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1300px){
     .card-container{
         grid-template-columns: repeat(4, 1fr);
         justify-content: space-between;
