--- a/team.scss
+++ b/team.scss
@@ -78,13 +78,21 @@
      padding: 25px 20px;
      margin-bottom: 0;
      width: 100%;
+     transition: transform .1s ease-out;
   }
   
   .card:hover {
      transition: all 2s ease;
+  transform: scale(1.03);
      box-shadow: -.5px -.5px .5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
   }
   
+  
+.logo_img:hover
+{
+  transform: scale(1.5);
+}
+
   .card-img {
      width: 100%;
      display: block;
@@ -115,6 +123,7 @@
   .logo_img {
      cursor: pointer;
      margin-right: 9px;
+     transition: transform .1s;
   }
   
   
